--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="#">Studio</a></li>
-          <li><a href="№">Portfolio</a></li>
-          <li><a href="№">Contacts</a></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -27,14 +27,15 @@
     <!--//Header -->
 
     <!-- Hero section -->
-    <section>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
-    </section>
-    <!-- //Hero section -->
-
-    <!-- Section 1 -->
     <main>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+      <!-- //Hero section -->
+
+      <!-- Section 1 -->
+
       <section>
         <h2>Quality</h2>
         <ul>
