--- a/index.html
+++ b/index.html
@@ -75,15 +75,11 @@
       <!-- Section 2 -->
       <section>
         <h2>What are we doing</h2>
-        <a href=""
-          ><img src="/img/img1.jpg" alt="statis" width="360" height="300"
-        /></a>
-        <a href=""
-          ><img src="/img/img2.jpg" alt="program" width="360" height="300"
-        /></a>
-        <a href=""
-          ><img src="/img/img3.jpg" alt="phone" width="360" height="300"
-        /></a>
+        <img src="./images/img1.jpg" alt="statis" width="360" height="300" />
+
+        <img src="./images/img2.jpg" alt="program" width="360" height="300" />
+
+        ><img src="./images/img3.jpg" alt="phone" width="360" height="300" />
       </section>
       <!-- //Section 2 -->
 
@@ -92,22 +88,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="/img/imgteam/img.jpg" alt="teamcard1" width="264" />
+            <img src="./images/img.jpg" alt="teamcard1" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="/img/imgteam/11.jpg" alt="teamcard2" width="264" />
+            <img src="./images/img11.jpg" alt="teamcard2" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./img/imgteam/22.jpg" alt="teamcard3" width="264" />
+            <img src="./images/img22.jpg" alt="teamcard3" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="/img/imgteam/33.jpg" alt="teamcard4" width="264" />
+            <img src="./images/img33.jpg" alt="teamcard4" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
