--- a/index.html
+++ b/index.html
@@ -75,11 +75,29 @@
       <!-- Section 2 -->
       <section>
         <h2>What are we doing</h2>
-        <img src="./images/img1.jpg" alt="statis" width="360" height="300" />
+        <ul>
+          <li>
+            <img
+              src="./images/img1.jpg"
+              alt="statis"
+              width="360"
+              height="300"
+            />
+          </li>
 
-        <img src="./images/img2.jpg" alt="program" width="360" height="300" />
+          <li>
+            <img
+              src="./images/img2.jpg"
+              alt="program"
+              width="360"
+              height="300"
+            />
+          </li>
 
-        ><img src="./images/img3.jpg" alt="phone" width="360" height="300" />
+          <li>
+            <img src="./images/img3.jpg" alt="phone" width="360" height="300" />
+          </li>
+        </ul>
       </section>
       <!-- //Section 2 -->
 
